# kreta

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  fly.toml  requirements.txt  thanks.py
.github/workflows/: check.yml  deploy.yml  fly-deploy.yml  test.yml
absence-analyzer/: Cargo.toml
absence-analyzer/src/: by_excuse.rs  by_week.rs  forecast.rs  html_stats.rs  lib.rs  retreive.rs
absence-analyzer/src/html_stats/: col_by_type.rs  frame.html  line_by_week.rs  mod.rs  total.rs
credsign/: Cargo.toml  README.md
credsign/src/: lib.rs  tests.rs
kreta-combine/: Cargo.toml  README.md  REAMDE.md
kreta-combine/src/: lib.rs
kreta-rs/: Cargo.toml
kreta-rs/src/client/: absences.rs  client.rs  exam.rs  homework.rs  mod.rs  refresh.rs  timetable.rs
kreta-rs/src/login/: login_flow.rs  mod.rs  tokens.rs
login_test/: Cargo.toml
login_test/src/: credentials.rs  creds_from_file.rs  login_flow.rs  main.rs
timerange/: Cargo.toml  README.md
timerange/src/: lib.rs
timetable-to-ical/: Cargo.toml
timetable-to-ical-server/: Cargo.toml
timetable-to-ical-server/src/: clients.rs  k8.rs  landing.rs  main.rs
timetable-to-ical-server/src/timetables/: combine_k8.rs  generic_absences.rs  generic_combine.rs  generic_timetable.rs  login_base64.rs  login_k8.rs  mod.rs  timetable_base64.rs  utils_receive_opts.rs
timetable-to-ical-server/static/: landing.html  styles.css
timetable-to-ical/src/: absence_best_guess.rs  combine.rs  err.rs  lib.rs
