[workspace]
resolver = "3"
members = [ "kreta-rs","login_test", "timetable-to-ical"]

[workspace.dependencies]
kreta-rs = { path = "./kreta-rs", default-features = false }
timetable-to-ical.path = "./timetable-to-ical"

anyhow = "1.0.100"
base64 = "0.22.1"
rand = "0.9.2"
reqwest = "0.12.23"
scraper = "0.24.0"
serde = { version = "1.0.226", features = ["derive"] }
sha2 = "0.10.9"
tokio = "1.47.1"
serde_json = "1.0.145"
