[workspace]
resolver = "3"
members = [ "kreta-combine", "kreta-rs","login_test", "timetable-to-ical", "timetable-to-ical-server"]

[workspace.dependencies]
kreta-rs = { path = "./kreta-rs", default-features = false }
kreta-combine.path = "./kreta-combine"
timetable-to-ical.path = "./timetable-to-ical"

anyhow = "1.0.100"
base64 = "0.22.1"
rand = "0.9.2"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls"] }
scraper = "0.24.0"
serde = { version = "1.0.226", features = ["derive"] }
sha2 = "0.10.9"
tokio = "1.47.1"
serde_json = { package = "serde_json_path_to_error", version = "0.1.5" }
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }
