[workspace]
resolver = "3"
members = [
	"credsign",
	"kreta-combine",
	"kreta-rs",
	"login_test",
	"timerange",
	"timetable-to-ical",
	"timetable-to-ical-server",
	"absence-analyzer",
]

[workspace.dependencies]
kreta-rs = { path = "./kreta-rs" }
kreta-combine.path = "./kreta-combine"
timetable-to-ical = { path = "./timetable-to-ical", features = ["serde"] }
timetable-to-ical-server.path = "./timetable-to-ical-server"
credsign.path = "./credsign"
timerange.path = "./timerange"
absence-analyzer.path = "./absence-analyzer"

anyhow = "1.0.102"
base64 = "0.22.1"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = [
	"rustls",
] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = "1.49.0"
serde_json = { package = "serde_json_path_to_error", version = "0.1.5" }
chrono = { version = "0.4.43", default-features = false, features = [
	"std",
	"clock",
] }
chrono-tz = "0.10.4"
futures = { version = "0.3.32", default-features = false, features = ["std"] }
