[package]
name = "absence-analyzer"
version = "0.1.0"
edition = "2024"

[features]
save_load = ["dep:rmp-serde", "dep:tokio"]
default = ["save_load"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
kreta-rs.workspace = true
rmp-serde = { version = "1.3.1", optional = true }
tokio = { workspace = true, features = ["fs"], optional = true }
