[package]
name = "kreta-combine"
version = "0.1.0"
edition = "2024"

[features]
default = ["timerange"]
timerange = ["kreta-rs/timerange", "dep:futures"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
kreta-rs.workspace = true
tokio = { workspace = true, features = ["macros"] }
futures = { workspace = true, optional = true }
