[package]
name = "kreta-rs"
version = "0.1.0"
edition = "2024"

[dependencies]

anyhow.workspace = true
base64.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = [ "cookies", "json" ] }
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
