[package]
name = "kreta-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["client", "timerange"]
client = ["dep:base64", "dep:rand", "dep:reqwest", "dep:scraper", "dep:sha2", "dep:serde_json"]
timerange = ["dep:timerange", "dep:chrono", "dep:futures"]

[dependencies]
anyhow.workspace = true
base64 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = [ "cookies", "json" ] }
scraper = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
timerange = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
