[package]
name = "login_test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["rt", "fs"] }

kreta-rs = { workspace = true, features = ["client"] }
timetable-to-ical.workspace = true
chrono.workspace = true
absence-analyzer.workspace = true
