[package]
name = "timetable-to-ical-server"
version = "0.1.0"
edition = "2024"

[features]
default = ["combine"] # TODO remove this
combine = ["timetable-to-ical/combine"]

[dependencies]
actix-web = { version = "4.11.0", features = ["rustls"] }
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
chrono.workspace = true

kreta-rs = { workspace = true, features = ["client"] }
timetable-to-ical.workspace = true
base64.workspace = true
sha2.workspace = true
