[package]
name = "timetable-to-ical-server"
version = "0.1.0"
edition = "2024"

[features]
default = [
	"combine",
	"absence-analyzer",
] # you should be able to remove any of these

combine = ["timetable-to-ical/combine"]
absence-analyzer = ["dep:absence-analyzer"]

[dependencies]
actix-web = { version = "4.12.1", features = ["rustls"] }
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
chrono.workspace = true

kreta-rs = { workspace = true, features = ["client"] }
timetable-to-ical.workspace = true
base64.workspace = true
sha2.workspace = true
credsign.workspace = true
serde_json = { workspace = true }
serde.workspace = true
absence-analyzer = { workspace = true, optional = true }
