[package]
name = "timetable-to-ical"
version = "0.1.0"
edition = "2024"

[features]
default = ["combine"] # TODO remove this
combine = ["dep:kreta-combine", "dep:anyhow"]

[dependencies]
chrono.workspace = true
ics = "0.5.8"
kreta-rs = { workspace = true, default-features = false }
kreta-combine = { workspace = true, optional = true }
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = { workspace = true, optional = true }
chrono-tz.workspace = true
